--- a/base/html/search_main.html
+++ b/base/html/search_main.html
@@ -169,6 +169,67 @@
       window.onload = function () {
         var map1 = new ngii_wmts.map('map1', { zoom: 6 });
       };
+
+      /* 지점 검색 UI 스크립트 */
+      var $searchContainer = $('.search-view-container');
+      function allRemoveActive() {
+        $('.depth1 button', $searchContainer).removeClass('active');
+        $('.depth2 .area', $searchContainer).removeClass('active');
+        $('.btn-custom-wrap .depth2', $searchContainer).hide();
+      }
+
+      // 지역, 시스템 버튼 클릭 이벤트
+      $('.btn-custom', $searchContainer).on('click', function () {
+        $(this).parent().toggleClass('active');
+
+        if (!$(this).parent().is('.active')) {
+          allRemoveActive();
+        }
+        if ($(this).parent('.js-custom-wrap-system').is('.active')) {
+          allRemoveActive();
+          $('.js-custom-wrap-location', $searchContainer).removeClass('active');
+        }
+        if ($(this).parent('.js-custom-wrap-location').is('.active')) {
+          $('.js-custom-wrap-system', $searchContainer).removeClass('active');
+        }
+      });
+
+      // 지역 버튼 클릭시 노출되는 1depth 버튼 클릭 이벤트
+      $('.depth1 button', $searchContainer).on('click', function () {
+        var $targetPoint = $(this).data('target');
+
+        if ($(this).data('all') === '전체') {
+          $(this).closest('.btn-custom-wrap').find('.btn-custom').text($(this).data('all'));
+          setTimeout(function () {
+            allRemoveActive();
+            $('.btn-custom-wrap', $searchContainer).removeClass('active');
+          }, 100);
+        }
+
+        $('.depth1 button', $searchContainer).removeClass('active');
+        $(this).addClass('active');
+
+        $('.depth2 .area', $searchContainer).removeClass('active');
+        var $pointArea = $('#' + $targetPoint);
+        $('.btn-custom-wrap .depth2', $searchContainer).show();
+        $pointArea.addClass('active');
+      });
+
+      // 지역 버튼의 1depth 버튼 클릭시 노출되는 2depth 버튼 클릭 이벤트
+      $('.depth2 button', $searchContainer).on('click', function () {
+        var $txt = $(this).text();
+        $(this).closest('.btn-custom-wrap').find('.btn-custom').text($txt);
+        setTimeout(function () {
+          allRemoveActive();
+          $('.btn-custom-wrap', $searchContainer).removeClass('active');
+        }, 100);
+      });
+
+      // 시스템 버튼 클릭 노출 되는 버튼의 클릭 이벤트
+      $('.js-custom-wrap-system .chk-box button', $searchContainer).on('click', function () {
+        var $txt = $(this).text();
+        $(this).closest('.js-custom-wrap-system').removeClass('active').children('.btn-custom').text($txt);
+      });
     </script>
   </body>
 </html>
