1. 교차로 ROI 화면 탭 별 "동기화" 버튼 추가 2. 교차로 상세통계, 교차로 비교통계 화면 수정

--- a/base/html/crossroads_roi_set_tab.html
+++ b/base/html/crossroads_roi_set_tab.html
@@ -119,7 +119,10 @@
           <section class="roi-set-list-section">
             <div class="roi-set-list-header">
               <h3>ROI 설정 목록</h3>
-              <button type="button" class="btn-md bg-navy">저장</a>
+              <span class="right">
+                <button type="button" class="btn-md bg-navy">동기화</a>
+                <button type="button" class="btn-md bg-navy">저장</a>
+              </span>
             </div>
             <!-- //roi-set-list-header -->
             <div class="data-tbl-gray">
@@ -278,7 +281,10 @@
           <section class="roi-set-list-section">
             <div class="roi-set-list-header">
               <h3>ROI 설정 목록</h3>
-              <button type="button" class="btn-md bg-navy">저장</a>
+              <span class="right">
+                <button type="button" class="btn-md bg-navy">동기화</a>
+                <button type="button" class="btn-md bg-navy">저장</a>
+              </span>
             </div>
             <!-- //roi-set-list-header -->
 
@@ -495,7 +501,10 @@
           <section class="roi-set-list-section">
             <div class="roi-set-list-header">
               <h3>ROI 설정 목록</h3>
-              <button type="button" class="btn-md bg-navy">저장</a>
+              <span class="right">
+                <button type="button" class="btn-md bg-navy">동기화</a>
+                <button type="button" class="btn-md bg-navy">저장</a>
+              </span>
             </div>
             <!-- //roi-set-list-header -->
 
@@ -637,7 +646,10 @@
           <section class="roi-set-list-section">
             <div class="roi-set-list-header">
               <h3>ROI 설정 목록</h3>
-              <button type="button" class="btn-md bg-navy">저장</a>
+              <span class="right">
+                <button type="button" class="btn-md bg-navy">동기화</a>
+                <button type="button" class="btn-md bg-navy">저장</a>
+              </span>
             </div>
             <!-- //roi-set-list-header -->
 
