--- a/base/html/crossroads_stats_comparison.html
+++ b/base/html/crossroads_stats_comparison.html
@@ -115,8 +115,56 @@
                       </div>
                     </div>
                     <!-- //chart-wrap -->
+                    <div class="chart-wrap">
+                      <h3>지점명 3</h3>
+                      <div class="chart-container">
+                        <!-- 차트 크기 802(px) x 137(px) -->
+                        <img
+                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
+                          alt="퍼블리싱 확인용 더미 이미지"
+                          class="dummy-img"
+                        />
+                      </div>
+                    </div>
+                    <!-- //chart-wrap -->
+                    <div class="chart-wrap">
+                      <h3>지점명 4</h3>
+                      <div class="chart-container">
+                        <!-- 차트 크기 802(px) x 137(px) -->
+                        <img
+                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
+                          alt="퍼블리싱 확인용 더미 이미지"
+                          class="dummy-img"
+                        />
+                      </div>
+                    </div>
+                    <!-- //chart-wrap -->
                   </li>
                   <li>
+                    <div class="chart-wrap">
+                      <h3>지점명 1</h3>
+                      <div class="chart-container">
+                        <!-- 차트 크기 802(px) x 137(px) -->
+                        <img
+                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
+                          alt="퍼블리싱 확인용 더미 이미지"
+                          class="dummy-img"
+                        />
+                      </div>
+                    </div>
+                    <!-- //chart-wrap -->
+                    <div class="chart-wrap">
+                      <h3>지점명 2</h3>
+                      <div class="chart-container">
+                        <!-- 차트 크기 802(px) x 137(px) -->
+                        <img
+                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
+                          alt="퍼블리싱 확인용 더미 이미지"
+                          class="dummy-img"
+                        />
+                      </div>
+                    </div>
+                    <!-- //chart-wrap -->
                     <div class="chart-wrap">
                       <h3>지점명 3</h3>
                       <div class="chart-container">
