--- a/base/html/crossroads_stats_view.html
+++ b/base/html/crossroads_stats_view.html
@@ -132,8 +132,56 @@
                       </div>
                     </div>
                     <!-- //chart-wrap -->
+                    <div class="chart-wrap">
+                      <h3>종촌동 방면</h3>
+                      <div class="chart-container">
+                        <!-- 차트 크기 802(px) x 137(px) -->
+                        <img
+                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
+                          alt="퍼블리싱 확인용 더미 이미지"
+                          class="dummy-img"
+                        />
+                      </div>
+                    </div>
+                    <!-- //chart-wrap -->
+                    <div class="chart-wrap">
+                      <h3>도담동 방면</h3>
+                      <div class="chart-container">
+                        <!-- 차트 크기 802(px) x 137(px) -->
+                        <img
+                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
+                          alt="퍼블리싱 확인용 더미 이미지"
+                          class="dummy-img"
+                        />
+                      </div>
+                    </div>
+                    <!-- //chart-wrap -->
                   </li>
                   <li>
+                    <div class="chart-wrap">
+                      <h3>아름동 행정복지센터 방면</h3>
+                      <div class="chart-container">
+                        <!-- 차트 크기 802(px) x 137(px) -->
+                        <img
+                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
+                          alt="퍼블리싱 확인용 더미 이미지"
+                          class="dummy-img"
+                        />
+                      </div>
+                    </div>
+                    <!-- //chart-wrap -->
+                    <div class="chart-wrap">
+                      <h3>아름초등학교 방면</h3>
+                      <div class="chart-container">
+                        <!-- 차트 크기 802(px) x 137(px) -->
+                        <img
+                          src="https://www.dummyimage.com/802x137/f9f9f9/000.png&amp;text=Chart+Area"
+                          alt="퍼블리싱 확인용 더미 이미지"
+                          class="dummy-img"
+                        />
+                      </div>
+                    </div>
+                    <!-- //chart-wrap -->
                     <div class="chart-wrap">
                       <h3>종촌동 방면</h3>
                       <div class="chart-container">
